--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-DB_HOST=localhost
 DB_USER=root
 DB_PASS=password
-DB_NAME=audit_system
-JWT_SECRET=your_secret_key
+DB_NAME=database_name
+DB_HOST=127.0.0.1
+DB_DIALECT=mysql
