--- a/config/config.json
+++ b/config/config.json
@@ -1,10 +1,9 @@
 {
-    "development": {
-      "username": process.env.DB_USER,
-      "password": process.env.DB_PASS,
-      "database": process.env.DB_NAME,
-      "host": process.env.DB_HOST,
-      "dialect": "mysql"
-    }
+  "development": {
+    "username": "root",
+    "password": "password",
+    "database": "database_name",
+    "host": "127.0.0.1",
+    "dialect": "mysql"
   }
-  
+}
