--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "1.0.0",
   "description": "Backend para aplicação de auditoria usando Node.js, Express e Sequelize.",
   "main": "src/index.js",
+  "type": "module",
   "scripts": {
     "start": "node src/index.js",
     "test": "node src/testConnection.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mysql2": "^3.3.1",
-    "sequelize": "^6.32.1"
+    "sequelize": "^6.32.1",
+    "yup": "^1.4.0"
   },
   "engines": {
     "node": ">=14.0.0"
